# InterAli

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  claims.py  food_listings.py
app/core/: config.py  database.py  security.py
app/db/: session.py
app/models/: __init__.py  claim.py  food_listing.py  user.py
app/repositories/: claim_repository.py  food_listing_repository.py  user_repository.py
app/schemas/: auth.py  claim.py  food_listing.py  user.py
app/services/: auth_service.py  claim_service.py  food_listing_service.py
tests/: test_claim_flow.py
