[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interali"
version = "0.1.0"
description = "Backend base para InterAli"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "asyncpg",
  "alembic",
  "pydantic-settings",
  "python-dotenv",
  "passlib[bcrypt]",
  "bcrypt==4.0.1",
  "python-jose[cryptography]",
  "email-validator",
]

[tool.setuptools]
packages = ["app"]
